<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/navigation_view_group_category_label">
        <menu>
            <item
                android:id="@+id/navigation_view_category_all"
                android:title="@string/navigation_view_category_all"/>
            <item
                android:id="@+id/navigation_view_category_business"
                android:title="@string/navigation_view_category_business"/>
            <item
                android:id="@+id/navigation_view_category_entertainment"
                android:title="@string/navigation_view_category_entertainment"/>
            <item
                android:id="@+id/navigation_view_category_gaming"
                android:title="@string/navigation_view_category_gaming"/>
            <item
                android:id="@+id/navigation_view_category_general"
                android:title="@string/navigation_view_category_general"/>
            <item
                android:id="@+id/navigation_view_category_music"
                android:title="@string/navigation_view_category_music"/>
            <item
                android:id="@+id/navigation_view_category_politics"
                android:title="@string/navigation_view_category_politics"/>
            <item
                android:id="@+id/navigation_view_category_science_and_nature"
                android:title="@string/navigation_view_category_science_and_nature"/>
            <item
                android:id="@+id/navigation_view_category_sport"
                android:title="@string/navigation_view_category_sport"/>
            <item
                android:id="@+id/navigation_view_category_technology"
                android:title="@string/navigation_view_category_technology"/>
        </menu>
    </item>

    <item android:title="@string/navigation_view_group_language_label">
        <menu>
            <item
                android:id="@+id/navigation_view_language_all"
                android:title="@string/navigation_view_language_all"/>
            <item
                android:id="@+id/navigation_view_language_en"
                android:title="@string/navigation_view_language_en"/>
            <item
                android:id="@+id/navigation_view_language_de"
                android:title="@string/navigation_view_language_de"/>
            <item
                android:id="@+id/navigation_view_language_fr"
                android:title="@string/navigation_view_language_fr"/>
        </menu>
    </item>

    <item android:title="@string/navigation_view_group_country_label">
        <menu>
            <item
                android:id="@+id/navigation_view_country_all"
                android:title="@string/navigation_view_country_all"/>
            <item
                android:id="@+id/navigation_view_country_au"
                android:title="@string/navigation_view_country_au"/>
            <item
                android:id="@+id/navigation_view_country_de"
                android:title="@string/navigation_view_country_de"/>
            <item
                android:id="@+id/navigation_view_country_gb"
                android:title="@string/navigation_view_country_gb"/>
            <item
                android:id="@+id/navigation_view_country_in"
                android:title="@string/navigation_view_country_in"/>
            <item
                android:id="@+id/navigation_view_country_it"
                android:title="@string/navigation_view_country_it"/>
            <item
                android:id="@+id/navigation_view_country_us"
                android:title="@string/navigation_view_country_us"/>
        </menu>
    </item>

</menu>